# reddit-editorial-workspace

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  bootstrap.py  config.py  database.py  db_worker.py  jobs.py  main.py  models.py  repository.py  schemas.py  task_dispatch.py  worker.py
backend/app/services/: __init__.py  document_orchestrator.py  filesystem.py  markdown_polish.py  obsidian_capture.py
backend/tests/: conftest.py  test_api.py  test_filesystem.py  test_integrations.py  test_jobs.py  test_queue.py
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx
web/components/: Dashboard.tsx
web/lib/: api.ts  types.ts
